--- a/EndeligeAutomater.tex
+++ b/EndeligeAutomater.tex
@@ -319,6 +319,7 @@ Konstruér $N = (Q, \Sigma, \delta, q_{0}, F)$ til at genkende $A_1 \cup A_{2}$.
 Klassen af regulære sprog er lukket under sammenkædningsoperationen.
 \end{theorem}
 
+% TODO: Lav visuelt bevis, og vær mere deskriptiv
 Et visuelt bevis er her undladt, trods at det er meget deskriptivt, fordi jeg er for doven. Det kommer på min todo liste. Hvis jeg ender med ikke at inkludere det, kan det ses på side 61 i sipser.
 
 \begin{proof}
@@ -345,6 +346,8 @@ Et visuelt bevis er her undladt, trods at det er meget deskriptivt, fordi jeg er
 \begin{theorem}
 Klassen af regulære sprog er lukket under stjerneoperationen.
 \end{theorem}
+
+% TODO: Lav visuelt bevis, og vær mere deskriptiv
 
 Igen undlader jeg det simple visuelle bevis af dovenskab. Denne gang kan du finde det på side 62 af Sipser.
 
