Tilføj flere generelle TODO's

--- a/EndeligeAutomater.tex
+++ b/EndeligeAutomater.tex
@@ -1,3 +1,10 @@
+%%%
+% Denne fil indeholder noter til Endelige Automater (Kapitel 1 i Sipser)
+% Derudover indeholder den også mine løsninger til opgaver om endelige automater.
+% Opgaver:
+% Ingen
+%%%
+
 
 \chapter{Endelige Automater}
 
