--- a/KontekstFrieSprog.tex
+++ b/KontekstFrieSprog.tex
@@ -1,3 +1,10 @@
+%%%
+% Denne fil indeholder noter til Kontekstfrie Sprog (Kapitel 2 i Sipser)
+% Derudover indeholder den også mine løsninger til opgaver om kontekstfrie sprog.
+% Opgaver:
+% TODO: Kapitel 2.2
+% TODO: Kapitel 2.3
+%%%
 \chapter{Kontekstfrie Sprog}
 
 I det tidligere kapitel om endelige automater, så vi den klasse af sprog som de genkender, regulære sprog, men vi så også eksempler på sprog som ikke er regulære, og hvordan dette kan bevises. I dette kapitel vil vi introducere \textit{kontekstfrie grammatikker} som er stærkere end endelige automater i deres deskriptionskraft. Sprogene der genkendes af kontekstfrie grammatikker kaldes \textit{kontekstfrie sprog}. Ydermere introducerer vi \textit{stakautomater} (pushdown automata på engelsk) som er en klasse af maskiner der genkender kontekstfrie sprog.
